# llm-serverless

./: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
