[project]
name = "llm-serverless"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.59",
    "dotenv>=0.9.9",
    "fastapi>=0.120.0",
    "gradio>=5.49.1",
    "mangum>=0.19.0",
    "openai>=2.6.1",
    "requests>=2.32.5",
]
